v2015-10-25.2
  * fish:
      创建了可能不存在的目录

v2015-10-25.1
  * fish:
      创建了可能不存在的目录

v2015-10-25
  * all:
      补充了一些基本的说明文件
  * fish:
      手动设置oh-my-fish，不再使用官方脚本

v2015-10-24
  * all:
      增加了一些基本的说明文件
  * zsh:
      修改了alias 设置，不再使用绝对路径
      修改了ssh_env

v2015-10-16
  * vim:
      增加了插件accelerated-smooth-scroll
  * zsh:
      规范了一些比较语句
      更改了挂载函数的逻辑
  * vsftpd:
      更改了说明文件

v2015-10-14
  * udev:
      增加了Spreadtrum 设备的udev rule

v2015-10-10
  * zsh:
      增加了挂载函数的安全性检查
      修正了ssh_env 的一处错误
  * vim:
      插件的细微调整

v2015-09-29.1
  * zsh:
      修正了ssh_env 的一处错误

v2015-09-29
  * zsh:
      增加了ssh_env 函数
      修改了mount 函数的参数
  * vim:
      增加了ack.vim 的配置

v2015-09-28
  * vim:
      更改了YCM 配置方式，优先使用非系统位置libclang
      增加了一些依赖检查

v2015-09-25
  * vim:
      更改了配色方案
      增加了Python 语法高亮

v2015-09-24
  * vim:
      现在vim 是必须依赖了
  * zsh:
      增加了挂载函数的提示信息

v2015-09-19
  * vim:
      更改了一些插件的行为
  * zsh:
      修正了一处android_env 无法编译出升级包的错误
      修正了android_env 无法正确辨别是否存在vitualevnwrapper 的错误

v2015-09-18.2
  * vim:
      修正了安装脚本中一处用于调试的手滑

v2015-09-18.1
  * zsh:
      修正了android_env 的一处逻辑错误
  * vim:
      默认使用基于clang 的代码高亮插件color_coded
      修改了YCM 变更导致的安装失败的问题

v2015-09-18
  * zsh:
      修正了android_env 在Ubuntu 环境上失败的错误
      现在~/.zsh/path 中显式使用PATH 变量了
      增加了cpan 的用户路径
  * vim:
      增加了几个代码高亮类插件
      修改了YCM 的配置方式

v2015-09-07
  * zsh:
      修改了两个挂载函数
      oh-my-zsh 现在使用一个单独的函数升级
      现在path 不会引发安全性问题了
  * vim:
      增加了插件ack.vim

v2015-08-29
  * all:
      公开了指令profile_upgrade
  * zsh:
      完善了函数android_env
      现在可以为profile_upgrade 指令指定-f 开关以强制更新了
      现在每次加载配置文件的时候都会对PATH 和MANPATH 进行去重了
  * vim:
      更改了导致光标移动延迟的一处按键映射
  * bash:
      增加了可能的情况下对交互接口目录的创建动作

v2015-08-24
  * all:
      增加了配置更新指令profile_upgrade
  * zsh:
      删除了java 和android sdk 的path 文件
      修改了一些alias
      增加了几处环境变量
      增加了函数android_env
      增加了函数repo
      改变了自定义函数的加载形式
  * vim:
      将插件taglist 替换为tagbar
      修改了一些按键映射
      现在无关图形界面一律使用dark 背景
  * zsh:
      增加了函数android_env