@@ -1,4 +1,4 @@
 zsh 配置文件，一整套Linux 下的shell 配置（和基本框架），包含了自己使用到的全部功能。
 
-zsh 配置繁琐，所以需要大量插件支持，强大却（插件）不够稳定，适合普通用户使用。
+zsh 配置繁琐，所以需要大量插件支持，强大却（插件）不够绝对稳定，适合普通用户使用。
 
