@@ -1,3 +1,10 @@
+v2015-10-26
+  * zsh:
+      调整了配置架构
+      现在android_env 函数会加载~/.bahsrc 了
+  * bash:
+      现在与zsh 共享自定义配置
+
 v2015-10-25.2
   * fish:
       创建了可能不存在的目录
